Added markdown and changed an error

--- a/Stock fundamentals.ipynb
+++ b/Stock fundamentals.ipynb
@@ -30,13 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "API_KEY = 'OGA9PANJZTKOUAW1'\n",
     "# API_KEY = '2M1YJDW3Y4UWN3R7'\n",
     "\n",
+    "#basket of stocks by industry to get industry averages\n",
     "finance_symbols = ['HSBC', 'BAC', 'C', 'WFC', 'DB']\n",
     "industrial_symbols = ['MMM', 'ITW', 'EMR', 'PH', 'TEX']\n",
     "consumer_symbols = ['WMT', 'EBAY', 'JD', 'BABA', 'ETSY']\n",
@@ -50,12 +51,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get EPS"
+    "## Method to get EPS and Industry EPS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +96,16 @@
     "        average_eps = sum(all_eps) / len(all_eps)\n",
     "        print(industry_name)\n",
     "        print(all_eps)\n",
-    "        print(f'Average EPS for finance sector in 2016: {average_eps:.2f}')\n",
+    "        print(f'Average EPS for sector in 2016: {average_eps:.2f}')\n",
     "    else:\n",
     "        print('No EPS data found for the specified companies in 2016.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Industry EPS"
    ]
   },
   {
@@ -200,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get earnings growth"
+    "## Get earnings growth "
    ]
   },
   {
@@ -296,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get debt-to-equity"
+    "## Method to get Debt-to-Equity Ratio and Industry Debt-to-Equity Ratio"
    ]
   },
   {
@@ -346,6 +354,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Debt to equity for stocks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -387,6 +402,13 @@
     "    print(stock)\n",
     "    print(get_debt_to_equity_2016(stock))\n",
     "    print('')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Industry Debt-to-Equity Ratio"
    ]
   },
   {
