added dji sorting in

--- a/Stock fundamentals.ipynb
+++ b/Stock fundamentals.ipynb
@@ -25,17 +25,25 @@
    ],
    "source": [
     "import requests \n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import yfinance as yf\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "API_KEY = 'OGA9PANJZTKOUAW1'\n",
     "# API_KEY = '2M1YJDW3Y4UWN3R7'\n",
+    "\n",
+    "dji_tickers = [\n",
+    "    \"AMZN\", \"AXP\", \"AMGN\", \"AAPL\", \"BA\", \"CAT\", \"CSCO\", \"CVX\", \"GS\", \"HD\",\n",
+    "    \"HON\", \"IBM\", \"INTC\", \"JNJ\", \"KO\", \"JPM\", \"MCD\", \"MMM\", \"MRK\", \"MSFT\",\n",
+    "    \"NKE\", \"PG\", \"TRV\", \"UNH\", \"CRM\", \"VZ\", \"V\", \"WMT\", \"DIS\", \"DOW\"\n",
+    "]\n",
     "\n",
     "#basket of stocks by industry to get industry averages\n",
     "finance_symbols = ['HSBC', 'BAC', 'C', 'WFC', 'DB']\n",
@@ -45,6 +53,175 @@
     "\n",
     "our_stocks = ['CRM', 'AMZN', 'JPM', 'GS', 'CAT']\n",
     "test = ['CRM']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting the stocks in the DJI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "$DOW: possibly delisted; no price data found  (1d 2010-01-01 00:00:00 -> 2016-01-01 00:00:00) (Yahoo error = \"Data doesn't exist for startDate = 1262322000, endDate = 1451624400\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CRM\n",
+      "Technology\n",
+      "0.023509137788098457\n",
+      "-------------------------------------\n",
+      "AMZN\n",
+      "Consumer Cyclical\n",
+      "0.02059007655175249\n",
+      "-------------------------------------\n",
+      "JPM\n",
+      "Financial Services\n",
+      "0.017399476913485822\n",
+      "-------------------------------------\n",
+      "GS\n",
+      "Financial Services\n",
+      "0.017257035558607588\n",
+      "-------------------------------------\n",
+      "CAT\n",
+      "Industrials\n",
+      "0.01717676572138756\n",
+      "-------------------------------------\n",
+      "CSCO\n",
+      "Technology\n",
+      "0.01699416009315366\n",
+      "-------------------------------------\n",
+      "AAPL\n",
+      "Technology\n",
+      "0.01680806337114829\n",
+      "-------------------------------------\n",
+      "V\n",
+      "Financial Services\n",
+      "0.0160295384279765\n",
+      "-------------------------------------\n",
+      "AXP\n",
+      "Financial Services\n",
+      "0.015268462309620161\n",
+      "-------------------------------------\n",
+      "UNH\n",
+      "Healthcare\n",
+      "0.015178125049240036\n",
+      "-------------------------------------\n",
+      "BA\n",
+      "Industrials\n",
+      "0.015103209971189076\n",
+      "-------------------------------------\n",
+      "AMGN\n",
+      "Healthcare\n",
+      "0.015009135256511092\n",
+      "-------------------------------------\n",
+      "INTC\n",
+      "Technology\n",
+      "0.014847112252182394\n",
+      "-------------------------------------\n",
+      "NKE\n",
+      "Consumer Cyclical\n",
+      "0.014819119924310481\n",
+      "-------------------------------------\n",
+      "MSFT\n",
+      "Technology\n",
+      "0.014631929562605183\n",
+      "-------------------------------------\n",
+      "HON\n",
+      "Industrials\n",
+      "0.014194316336054025\n",
+      "-------------------------------------\n",
+      "DIS\n",
+      "Communication Services\n",
+      "0.014015526128663906\n",
+      "-------------------------------------\n",
+      "CVX\n",
+      "Energy\n",
+      "0.013513263671291124\n",
+      "-------------------------------------\n",
+      "HD\n",
+      "Consumer Cyclical\n",
+      "0.012977468792563576\n",
+      "-------------------------------------\n",
+      "MRK\n",
+      "Healthcare\n",
+      "0.012262357674324768\n",
+      "-------------------------------------\n",
+      "IBM\n",
+      "Technology\n",
+      "0.012018495810931258\n",
+      "-------------------------------------\n",
+      "MMM\n",
+      "Industrials\n",
+      "0.011996171392490925\n",
+      "-------------------------------------\n",
+      "TRV\n",
+      "Financial Services\n",
+      "0.011592692624304058\n",
+      "-------------------------------------\n",
+      "VZ\n",
+      "Communication Services\n",
+      "0.01025435482224028\n",
+      "-------------------------------------\n",
+      "WMT\n",
+      "Consumer Defensive\n",
+      "0.009978206511761782\n",
+      "-------------------------------------\n",
+      "KO\n",
+      "Consumer Defensive\n",
+      "0.009600522796725398\n",
+      "-------------------------------------\n",
+      "MCD\n",
+      "Consumer Cyclical\n",
+      "0.00954157013276583\n",
+      "-------------------------------------\n",
+      "PG\n",
+      "Consumer Defensive\n",
+      "0.00901625537132671\n",
+      "-------------------------------------\n",
+      "JNJ\n",
+      "Healthcare\n",
+      "0.008884633072240404\n",
+      "-------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock_dict = {}\n",
+    "for i in dji_tickers:\n",
+    "\tstock_data = yf.Ticker(i)\n",
+    "\thist_stock = stock_data.history(start = pd.to_datetime('2010-01-01'), end = pd.to_datetime('2016-01-01'), interval = '1d')\n",
+    "\tsector = stock_data.info.get('sector', 'N/A')\n",
+    "\tbt_data = pd.DataFrame()\n",
+    "\tbt_data[\"Close_Price\"] = hist_stock[\"Close\"]\n",
+    "\tbt_data[\"Return\"] = np.log(bt_data[\"Close_Price\"] / bt_data[\"Close_Price\"].shift(1))\n",
+    "\tbt_data = bt_data.dropna()\n",
+    "\tif len(bt_data['Close_Price']) != 0:\n",
+    "\t\tstock_dict[i] = {}\n",
+    "\t\tstock_dict[i]['data'] = bt_data\n",
+    "\t\tstock_dict[i]['sector'] = sector\n",
+    "\n",
+    "# check standard deviation\n",
+    "for i in stock_dict:\n",
+    "\tstock_dict[i]['volatility'] = stock_dict[i]['data']['Return'].std()\n",
+    "\n",
+    "sorted_stock_dict = dict(sorted(stock_dict.items(), key=lambda x: x[1][\"volatility\"], reverse=True))\n",
+    "for stock in sorted_stock_dict:\n",
+    "\tprint(stock)\n",
+    "\tprint(sorted_stock_dict[stock]['sector'])\n",
+    "\tprint(sorted_stock_dict[stock]['volatility'])\n",
+    "\tprint('-------------------------------------')"
    ]
   },
   {
